--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@
 .frogr-landing-page .frame {
   display: flex;
   flex-direction: column;
-  width: 1440px;
+  width: 100%;
   align-items: center;
   gap: 100px;
   position: absolute;
   top: 0;
-  left: calc(50.00% - 720px);
+  /* left: calc(50.00% - 720px); */
 }
 
 .frogr-landing-page .div {
@@ -59,7 +59,7 @@
 }
 
 .frogr-landing-page .vector {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: 100%;
   top: 13.92%;
@@ -328,7 +328,7 @@
   position: relative;
   width: fit-content;
   margin-top: -0.97px;
-  font-family: "Outfit-Sem";
+  /* font-family: "Outfit-Sem"; */
   font-weight: 600;
   color: var(--text-color-black);
   font-size: 21.4px;
@@ -357,7 +357,7 @@
   position: relative;
   width: fit-content;
   margin-top: -1.08px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: var(--text-color-black);
   font-size: 19.5px;
@@ -414,7 +414,7 @@
   position: relative;
   width: fit-content;
   margin-top: -1.08px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #ffd75b;
   font-size: 19.5px;
@@ -460,9 +460,9 @@
 
 .frogr-landing-page .enter-your-email-to {
   position: relative;
-  width: fit-content;
+  width: 100%;
   margin-top: -1.02px;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 19.1px;
@@ -491,7 +491,7 @@
   position: relative;
   width: fit-content;
   margin-top: -0.81px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: var(--primary-100);
   font-size: 17.8px;
@@ -548,8 +548,8 @@
 .frogr-landing-page .text-wrapper-6 {
   position: relative;
   width: fit-content;
-  font-family: "Outfit-Re";
-  font-weight: 400;
+  font-family: "Lora";
+  font-weight: 700;
   color: var(--secondary-100);
   font-size: 40px;
   text-align: center;
@@ -562,7 +562,7 @@
   flex-direction: column;
   width: 359px;
   align-items: center;
-  gap: 16px;
+  gap: 10px;
   position: relative;
   align-self: stretch;
   border-right-width: 0.8px;
@@ -587,8 +587,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Lora";
-  font-weight: 700;
+  /* font-family: "Lora"; */
+  font-weight: 400;
   color: var(--secondary-100);
   font-size: 40px;
 }
@@ -688,8 +688,8 @@
   align-items: center;
   justify-content: center;
   align-self: stretch;
-  font-family: "Outfit-M";
-  font-weight: 500;
+  /* font-family: "Outfit-M"; */
+  font-weight: 700;
   color: #020202;
   font-size: 26px;
   text-align: center;
@@ -703,7 +703,22 @@
   align-items: center;
   justify-content: center;
   width: 725px;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
+  font-weight: 500;
+  color: #020202;
+  font-size: 24px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 33px;
+}
+
+.frogr-landing-page .sub-text{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 725px;
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 22px;
@@ -714,9 +729,10 @@
 
 .frogr-landing-page .div-block-sc {
   display: flex;
-  width: 1440px;
+  width: 100%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 25px;
   padding: 60px 100px;
   position: relative;
   flex: 0 0 auto;
@@ -746,7 +762,7 @@
   align-items: center;
   justify-content: center;
   align-self: stretch;
-  font-family: "Outfit-Sem";
+  /* font-family: "Outfit-Sem"; */
   font-weight: 600;
   color: var(--secondary-100);
   font-size: 50px;
@@ -811,7 +827,7 @@
   align-items: center;
   /* justify-content: center; */
   align-self: stretch;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 22px;
@@ -825,7 +841,7 @@
   align-items: center;
   justify-content: center;
   width: 554px;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 20px;
@@ -856,7 +872,7 @@
   align-items: center;
   justify-content: center;
   width: 550px;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 20px;
@@ -897,7 +913,7 @@
   align-items: center;
   justify-content: center;
   width: 547px;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 20px;
@@ -940,7 +956,7 @@
   justify-content: center;
   width: 553px;
   margin-top: -1.00px;
-  font-family: "Outfit-Sem";
+  /* font-family: "Outfit-Sem"; */
   font-weight: 600;
   color: var(--secondary-100);
   font-size: 50px;
@@ -954,7 +970,7 @@
   align-items: center;
   justify-content: center;
   width: 528.07px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -1020,7 +1036,7 @@
   justify-content: center;
   width: 528.07px;
   margin-right: -111.05px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -1035,7 +1051,7 @@
   /* justify-content: center; */
   width: 555.27px;
   margin-right: -138.25px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -1067,7 +1083,7 @@
   justify-content: center;
   width: 464px;
   margin-right: -46.98px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -1143,7 +1159,7 @@
   top: 60px;
   left: 124px;
   width: 135px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #000000;
   font-size: 22.5px;
@@ -1156,7 +1172,7 @@
   top: 137px;
   left: 434px;
   width: 124px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #000000;
   font-size: 17px;
@@ -1176,10 +1192,10 @@
 .frogr-landing-page .frame-18 {
   display: flex;
   flex-direction: column;
-  width: 1440px;
+  width: 100%;
   align-items: center;
   gap: 40px;
-  padding: 20px 100px;
+  /* padding: 20px 100px; */
   position: relative;
   flex: 0 0 auto;
 }
@@ -1226,14 +1242,14 @@
 .frogr-landing-page .component {
   display: flex;
   flex-direction: column;
-  width: 1440px;
+  width: 100%;
   height: 815px;
-  align-items: flex-start;
+  align-items: center;
   gap: 60px;
   padding: 60px 100px;
   position: relative;
-  margin-left: -100.00px;
-  margin-right: -100.00px;
+  /* margin-left: -100.00px; */
+  /* margin-right: -100.00px; */
   background-color: #ffd02c;
   overflow: hidden;
 }
@@ -1920,7 +1936,7 @@
   justify-content: center;
   width: 590px;
   margin-top: -1.00px;
-  font-family: "Outfit-Sem";
+  /* font-family: "Outfit-Sem"; */
   font-weight: 600;
   color: var(--secondary-100);
   font-size: 50px;
@@ -1934,7 +1950,7 @@
   align-items: center;
   justify-content: center;
   width: 553px;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 30px;
@@ -2000,7 +2016,7 @@
   align-items: center;
   /* justify-content: center; */
   width: 497.49px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -2032,7 +2048,7 @@
   justify-content: center;
   width: fit-content;
   margin-right: -117.14px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -2078,7 +2094,7 @@
   justify-content: center;
   width: 531px;
   margin-right: -138.14px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -2224,7 +2240,7 @@
   justify-content: center;
   align-self: stretch;
   margin-top: -0.52px;
-  font-family: "Outfit";
+  /* font-family: "Outfit"; */
   font-weight: 700;
   color: #000000;
   font-size: 32px;
@@ -2239,7 +2255,7 @@
   align-items: center;
   justify-content: center;
   align-self: stretch;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 20.2px;
@@ -2254,7 +2270,7 @@
   align-items: center;
   justify-content: center;
   align-self: stretch;
-  font-family: "Outfit-Re";
+  /* font-family: "Outfit-Re"; */
   font-weight: 400;
   color: #020202;
   font-size: 16px;
@@ -2322,7 +2338,7 @@
   justify-content: center;
   width: 515px;
   margin-right: -97.98px;
-  font-family: "Outfit-M";
+  /* font-family: "Outfit-M"; */
   font-weight: 500;
   color: #020202;
   font-size: 24px;
@@ -2573,4 +2589,292 @@ body{margin:0;color:#111;background:#fff;line-height:1.45}
   .footer-container{grid-template-columns:1fr;gap:28px}
   .footer-links{justify-content:flex-start}
 }
+
+/* media query start */
+/* =========================================================
+   RESPONSIVE DESIGN (Below 1400px → 320px)
+   ========================================================= */
+
+/* ---------- Large Laptops & Smaller Desktops (≤1399px) ---------- */
+@media (max-width: 1399px) {
+  .frogr-landing-page .frame {
+    width: 95%;
+    margin: 0 auto;
+  }
+
+  .frogr-landing-page .landing-page-nav {
+    padding: 24px 60px;
+  }
+
+  .frogr-landing-page .frame-9,
+  .frogr-landing-page .frame-43 {
+    padding: 60px;
+  }
+
+  .frogr-landing-page .frame-18,
+  .frogr-landing-page .faq-section {
+    padding: 60px;
+  }
+
+  .frogr-landing-page .footer-container {
+    padding: 60px;
+  }
+}
+
+/* ---------- Medium Laptops (≤1199px) ---------- */
+@media (max-width: 1199px) {
+  .frogr-landing-page .landing-page-nav {
+    gap: 30px;
+  }
+
+  .frogr-landing-page .frame-9 {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  .frogr-landing-page .div-block-sc-5 {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .frogr-landing-page .frame-43 .frame-44 {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  .frogr-landing-page .frame-44 > div {
+    width: 45%;
+  }
+
+  .frogr-landing-page .footer-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+  }
+}
+
+/* ---------- Tablets Landscape (≤991px) ---------- */
+@media (max-width: 991px) {
+  .frogr-landing-page .landing-page-nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .frogr-landing-page .frame-4,
+  .frogr-landing-page .div-block-sc,
+  .frogr-landing-page .div-block-sc-5,
+  .frogr-landing-page .frame-43 {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 40px 30px;
+  }
+
+  .frogr-landing-page .frame-44 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .frogr-landing-page .frame-44 > div {
+    width: 80%;
+  }
+
+  .frogr-landing-page .group-6,
+  .frogr-landing-page .group-8 {
+    width: 40%;
+    height: auto;
+  }
+
+  .frogr-landing-page .component .frame-20 {
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .faq-section {
+    padding: 50px 20px;
+  }
+
+  .footer-container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+}
+
+/* ---------- Tablets Portrait (≤767px) ---------- */
+@media (max-width: 767px) {
+  .frogr-landing-page .frame {
+    width: 100%;
+    padding: 0 20px;
+    gap: 40px;
+  }
+
+  .frogr-landing-page .p,
+  .frogr-landing-page .text-wrapper-10,
+  .frogr-landing-page .text-wrapper-17,
+  .frogr-landing-page .text-wrapper-42 {
+    font-size: 28px;
+    line-height: 1.3;
+  }
+
+  .frogr-landing-page .text-wrapper-43,
+  .frogr-landing-page .text-wrapper-47 {
+    font-size: 18px;
+  }
+
+  .frogr-landing-page .div-block-sc,
+  .frogr-landing-page .div-block-sc-5 {
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+  }
+
+  .frogr-landing-page .frame-44 {
+    flex-direction: column;
+  }
+
+  .frogr-landing-page .frame-45,
+  .frogr-landing-page .frame-48,
+  .frogr-landing-page .frame-50,
+  .frogr-landing-page .frame-51 {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .frogr-landing-page .faq-heading {
+    font-size: 26px;
+    margin-bottom: 20px;
+  }
+
+  .frogr-landing-page .accordion summary {
+    font-size: 16px;
+  }
+
+  .frogr-landing-page .footer-container {
+    padding: 40px 20px;
+  }
+}
+
+/* ---------- Mobile Devices (≤575px) ---------- */
+@media (max-width: 575px) {
+  .frogr-landing-page .frame {
+    gap: 30px;
+  }
+
+  .frogr-landing-page .landing-page-nav {
+    padding: 20px;
+  }
+
+  .frogr-landing-page .text-wrapper-12,
+  .frogr-landing-page .text-wrapper-17,
+  .frogr-landing-page .text-wrapper-42 {
+    font-size: 24px;
+  }
+
+  .frogr-landing-page .text-wrapper-43,
+  .frogr-landing-page .text-wrapper-45,
+  .frogr-landing-page .text-wrapper-47 {
+    font-size: 16px;
+  }
+
+  .frogr-landing-page .frame-8 {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .frogr-landing-page .input-field {
+    width: 100%;
+  }
+
+  .frogr-landing-page .secondary-wrapper {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .frogr-landing-page .faq-section {
+    padding: 40px 15px;
+  }
+
+  .frogr-landing-page .faq-section summary {
+    font-size: 15px;
+    padding: 10px 14px;
+  }
+
+  .frogr-landing-page .footer-desc {
+    font-size: 14px;
+  }
+
+  .frogr-landing-page .footer-links {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .social .icon {
+    width: 32px;
+    height: 32px;
+    font-size: 14px;
+  }
+}
+
+/* ---------- Small Mobile Screens (≤400px) ---------- */
+@media (max-width: 400px) {
+  .frogr-landing-page .frame {
+    padding: 0 10px;
+  }
+
+  .frogr-landing-page .text-wrapper-42 {
+    font-size: 22px;
+  }
+
+  .frogr-landing-page .faq-heading {
+    font-size: 22px;
+  }
+
+  .frogr-landing-page .footer-languages {
+    font-size: 13px;
+  }
+
+  .frogr-landing-page .footer-desc {
+    font-size: 13px;
+    line-height: 1.5;
+  }
+
+  .footer-links h4 {
+    font-size: 15px;
+  }
+
+  .footer-links a {
+    font-size: 14px;
+  }
+}
+
+/* ---------- Minimum Supported Size (≤320px) ---------- */
+@media (max-width: 320px) {
+  .frogr-landing-page .frame {
+    padding: 0 8px;
+    gap: 20px;
+  }
+
+  .frogr-landing-page .landing-page-nav {
+    padding: 12px;
+  }
+
+  .frogr-landing-page .text-wrapper-42,
+  .frogr-landing-page .text-wrapper-17 {
+    font-size: 20px;
+  }
+
+  .frogr-landing-page .footer-desc {
+    font-size: 12px;
+  }
+
+  .social .icon {
+    width: 28px;
+    height: 28px;
+    font-size: 12px;
+  }
+}
+
+/* media query start */
 
