--- a/style.css
+++ b/style.css
@@ -439,17 +439,19 @@ nav .button-container .two:hover {
     justify-content: center;
     background-color: #fdcd2c;
     background-image: url("./images/Section-one/banner.jpg");
-    background-size: cover;
+    background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
     padding-left: 7%;
     padding-right: 7%;
+    padding-bottom: 4%;
     /* margin-top: 120px !important; */
 }
 
 @media (min-width: 1440px){
     .section-one{
-        height: 991px;
+        height: 910px;
+        padding-bottom: 2%;
     }
 }
 
@@ -731,7 +733,7 @@ nav .button-container .two:hover {
   .radio-label input[type="radio"] {
     width: 16px;
     height: 16px;
-    accent-color: #ffd02c;
+    accent-color: #000000;
     cursor: pointer;
   }
 
@@ -833,7 +835,7 @@ nav .button-container .two:hover {
       font-family: 'Open Sans', sans-serif;
       color: #000;
       font-size: 14px;
-      width: 100%;
+      width: 80%;
       /* width: 280px; */
       background: #fff;
       border: 1px solid #d1d5db;
@@ -2813,7 +2815,7 @@ body {
 /* SECTION ONE */
 @media (max-width: 1200px) {
     .section-one {
-        height: 560px;
+        height: 670px;
         padding-bottom: 20px;
         /* background-image: url("./images/Section-one/982.svg"); */
     }
@@ -2843,10 +2845,10 @@ body {
 
 @media (max-width: 1118px) {
     .section-one {
-        height: 550px;
+        height: 610px;
         padding: 16px 16px;
         /* align-items: center; */
-        /* background-image: url("./images/Section-one/tab.svg"); */
+        background-image: url("./images/Section-one/banner-tab.jpg");
     }
 
     .section-one .submit-btn {
@@ -2856,10 +2858,22 @@ body {
     }
 }
 
+@media (max-width: 888px) {
+    .section-one {
+        height: 530px;
+        padding: 16px 16px;
+        /* align-items: center; */
+        background-image: url("./images/Section-one/banner-tab.jpg");
+    }
+
+}
+
 @media (max-width: 768px) {
     .section-one {
-        height: 450px;
-        padding: 0px 16px;
+        height: 530px;  
+        padding: 16px 16px;
+        background-size: contain;
+
         /* align-items: center; */
         /* background-image: url("./images/Section-one/tab.svg"); */
     }
@@ -2908,7 +2922,7 @@ body {
 
 @media (max-width: 666px) {
     .section-one {
-        height: 393px;
+        height: 500px;
         /* background-image: url("./images/Section-one/580.svg"); */
     }
 }
@@ -3589,8 +3603,8 @@ body {
     }
 
     .section-one {
-        height: 286px;
-        /* background-image: url("./images/Section-one/mobile.svg"); */
+        height: 466px;
+        background-image: url("./images/Section-one/banner-mobile.jpg");
     }
 
     /* .section-one .field-container p{
@@ -3617,7 +3631,7 @@ body {
 
 @media (max-width: 420px) {
     .section-one {
-        height: 250px;
+        height: 430px;
     /* background-image: url("./images/Section-one/380.svg"); */
     }
 
