--- a/style.css
+++ b/style.css
@@ -780,8 +780,9 @@ nav .button-container .two:hover {
       margin: 0 auto;
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 10px;
       /* padding: 1rem; */
+      text-align: center;
     }
     
     .toggle-wrapper {
@@ -925,7 +926,7 @@ nav .button-container .two:hover {
     
     @media (min-width: 640px) {
       .form-wrapper {
-        flex-direction: row;
+        /* flex-direction: row; */
       }
     }
 
@@ -5282,7 +5283,7 @@ body {
 
 @media (max-width: 420px) {
     .section-one {
-        height: 430px;
+        height: 400px;
     /* background-image: url("./images/Section-one/380.svg"); */
     }
 
